# AUV-Group-Github

./: .gitignore  bluerov2_sensors.py  dance.py  package.xml  rovdrive.py  setup.py
bwsibot/logs/2024-07-16/flight2/: mav.parm
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/intro_to_ros/lib/intro_to_ros/: arm  disarm  drivepub  gpt  subscriber
install/intro_to_ros/share/intro_to_ros/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
intro_to_ros/: AImonte.py  MODS copy.py  MODS.py  Statebetter.py  Statespace.py  TODO.txxt  YOLO.py  YOLO_subscriber.py  YOLOmovement.py  arm.py  armdisarm.py  bluerov2_sensors.py  camera_subscriber.py  dance.py  disarm.py  flashing_lights.py  gpt.py  lane_subscriber.py  mavros_launch.py  mode.py  move.py  movement.py  physics_sim.py  pid.py  pid_depth.py  pid_heading.py  pressure.py  pressure_to_depth.py  publisher.py  rovdrive.py  setup.cfg  setup.py  subscriber.py  yolo.ipynb  yolo.py
intro_to_ros/best_ncnn_model/: metadata.yaml  model.ncnn.param  model_ncnn.py
intro_to_ros/bwsibot/logs/2024-07-16/flight1/: mav.parm
intro_to_ros/bwsibot/logs/2024-07-16/flight2/: flight.tlog  flight.tlog.raw  mav.parm
intro_to_ros/bwsibot/logs/2024-07-16/flight3/: defaults.parm  flight.tlog  flight.tlog.raw  mav.parm
intro_to_ros/bwsibot/logs/2024-07-16/flight4/: mav.parm
intro_to_ros/bwsibot/logs/2024-07-16/flight5/: mav.parm
intro_to_ros/bwsibot/logs/2024-07-17/flight1/: flight.tlog  flight.tlog.raw  mav.parm
intro_to_ros/bwsibot/logs/2024-07-20/flight1/: mav.parm
intro_to_ros/bwsibot/logs/2024-07-22/flight1/: flight.tlog  flight.tlog.raw  mav.parm
intro_to_ros/bwsibot/logs/2024-07-22/flight2/: flight.tlog  flight.tlog.raw  mav.parm
intro_to_ros/images/: Statebetter.py  Statespace.txt  archive.txt
intro_to_ros/intro_to_ros/: armdisarm.py  bluerov2_sensors.py  dance.py  publisher.py  rovdrive.py  subscriber.py
launch/: AT_test.yaml  PID_depth_test.yaml  PID_heading_test.yaml  YOLO.yaml  at.yaml  example.yaml  main.yaml  sensor.yaml  setup.yaml  sitl.yaml  testitall.yaml
launch/install/: local_setup.sh  setup.ps1  setup.sh  setup.zsh
launch/log/: latest_build
log/: latest_build
